2006-04-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_MapView.py: Reworked to display multiple smaller
	tiled map images
	* src/images/mk_blue_marble.py: Script to create the map tiles out of
	the nasa blue marble image
	* src/images/Makefile.am: Add map tile images and bootstrap them using
	mk_blue_marble.py

2006-04-10  Nathan Bullock <nathanbullock@gmail.com>
	* src/GrampsDb/_ReadGedcom.py: LDS fixes.
	* src/Editors/_EditLdsOrd.py: LDS fixes.
	* src/lds.py: LDS fixes.

2006-04-10  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Get rid of obsolete self.parent.

2006-04-10  Don Allingham  <don@gramps-project.org>
	* src/DateViews/_PersonView.py: goto active person after a redraw.
	* src/DataViews/_PedigreeViews.py: optimize the screen draws,
	redrawing only when the view is displayed and when the data needs
	to be updated.
	* src/Editors/_EditFamily.py: Fix adding of spouse after family
	has been created

2006-04-09  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.create_pages): Use toggle
	buttons on the sidebar.
	(ViewManager.change_page): Turn off previously active button.

2006-04-09  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/docgen/ODFDoc.py: Improve graphic alignment (Bug 1370498)
	* src/docgen/OpenOfficeDoc.py: Improve graphic alignment (Bug 1370498)
	* src/plugins/FamilyGroup.py: Fix traceback when no spouse exists.

2006-04-09  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py
	(GrampsBSDDB._delete_primary_from_reference_map): Accept txn
	argument; pass it on to self._remove_reference().
	(GrampsBSDDB._do_remove_object): Work out both regular and batch
	transactions.

	* src/Makefile.am: Clean byte-compiled files.
	* src/DataViews/Makefile.am: Clean byte-compiled files.
	* src/GrampsDb/Makefile.am: Clean byte-compiled files.
	* src/Config/Makefile.am: Clean byte-compiled files.
	* src/RelLib/Makefile.am: Clean byte-compiled files.