@@ -1,3 +1,7 @@
+2006-04-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/images/mk_blue_marble.py: Properly exit on error to let `make`
+	stop in that case.
+
 2006-04-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
 	* src/DataViews/_MapView.py: Reworked to display multiple smaller
 	tiled map images
